data/derived/fa15/progs/unify/prog3453.ml.out
Characters 28-58:
  let fixpoint (f,b) = wwhile (fun b -> (f(b), f(b) != b),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
